# semantic-kernel-starters

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  sk-starters.sln
.devcontainer/: devcontainer.json  post-create.sh
.github/: ado-compliance.yml  dependabot.yml  pull_request_template.md
sk-csharp-azure-functions/: ExecuteFunctionEndpoint.cs  HealthEndpoint.cs  Program.cs  README.md  sk-csharp-azure-functions.csproj  sk-csharp-azure-functions.sln
sk-csharp-chatgpt-plugin/: .gitignore  README.md
sk-csharp-console-chat/: ConsoleChat.cs  ConsoleGPTService.cs  Program.cs  README.md  sk-csharp-console-chat.csproj  sk-csharp-console-chat.sln
sk-csharp-hello-world/: Program.cs  README.md  sk-csharp-hello-world.csproj  sk-csharp-hello-world.sln
sk-java-hello-world/: README.md  example.conf.properties  pom.xml
sk-python-azure-functions/: README.md  function_app.py  local.settings.json
sk-python-azure-functions-chatgpt-plugin/: .gitignore  README.md  function_app.py  host.json  openapi.yaml  requirements.txt
sk-python-flask/: README.md  openapi.yaml  pyproject.toml
sk-python-flask-chatgpt-plugin/: README.md  openapi.yaml  pyproject.toml
sk-python-flask-chatgpt-plugin/.well-known/: ai-plugin.json
sk-python-flask-chatgpt-plugin/sk_python_flask_chatgpt_plugin/: app.py  config.py  kernel_utils.py
sk-python-flask-chatgpt-plugin/skills/FunSkill/Excuses/: config.json
sk-python-flask-chatgpt-plugin/skills/FunSkill/Joke/: config.json
sk-python-hello-world/: README.md  pyproject.toml
sk-typescript-console-chat/: .eslintrc.json  .gitignore  readme.md  (+6 more)
(+75 files in other folders)
